--- a/www/index.html
+++ b/www/index.html
@@ -49,7 +49,7 @@
                 <a class="mdl-navigation__link is-active" href="index.html">Home</a>
                 <a class="mdl-navigation__link" href="pilihpaket.html">Umroh Packages</a>
                 <a class="mdl-navigation__link" href="login.html">Login</a>
-                <a id="gcm_id" class="mdl-navigation__link"></a>
+                <!-- <a id="gcm_id" class="mdl-navigation__link"></a> -->
             </nav>
         </div>
         <main class="mdl-layout__content">
