--- a/www/tips-detail.html
+++ b/www/tips-detail.html
@@ -42,7 +42,7 @@
     <script src="js/app.js"></script>
 
     <!-- Regular Packages Controller -->
-    <script src="angular/controller/doaDetailController.js"></script>
+    <script src="angular/controller/tipsController.js"></script>
 
     <script type="text/javascript">
       function getSearchParameters() {
@@ -66,7 +66,7 @@
     </script>
 </head>
 
-<body ng-app="dreamtour" ng-controller="DoaDetailController">
+<body ng-app="dreamtour" ng-controller="TipsController">
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
         <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header" style="position: absolute;
     overflow-y: hidden;">
