--- a/www/tips.html
+++ b/www/tips.html
@@ -42,10 +42,31 @@
     <script src="js/app.js"></script>
 
     <!-- Regular Packages Controller -->
-    <script src="angular/controller/doaController.js"></script>
+    <script src="angular/controller/tipsController.js"></script>
+
+    <script type="text/javascript">
+      function getSearchParameters() {
+      var prmstr = window.location.search.substr(1);
+      return prmstr != null && prmstr != "" ? transformToAssocArray(prmstr) : {};
+      }
+
+      function transformToAssocArray( prmstr ) {
+          var params = {};
+          var prmarr = prmstr.split("&");
+          for ( var i = 0; i < prmarr.length; i++) {
+              var tmparr = prmarr[i].split("=");
+              params[tmparr[0]] = tmparr[1];
+          }
+          return params;
+      }
+
+      var parameter = getSearchParameters();
+
+      console.log(parameter.id);
+    </script>
 </head>
 
-<body ng-app="dreamtour" ng-controller="DoaController">
+<body ng-app="dreamtour" ng-controller="TipsController">
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
        <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header" style="position: absolute;
     overflow-y: hidden;">
@@ -61,7 +82,7 @@
               <div class="portfolio-logo" style="margin-top: 55px; margin-bottom: 25px; width: 100%;"></div>
                 <ul class="demo-list-item mdl-list">
                   <li class="mdl-list__item" ng-repeat="doa in doas">
-                    <span class="mdl-list__item-primary-content"><a href="doa1.html?id={{ $index }}">
+                    <span class="mdl-list__item-primary-content"><a href="tips-detail.html?id={{ $index }}">
                       {{ doa.name }}</a>
                     </span>
 
