--- a/www/index.html
+++ b/www/index.html
@@ -77,7 +77,7 @@
                         <a href="message.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect" style="box-shadow : none; width:100px; height:100px; margin-bottom: 5px;">
                           <img src="img/message.png" style="width:100%; height:100%;">
                         </a>
-                        <p style="color:white;">Message</p>
+                        <p style="color:white;">Customer Service</p>
                     </div>
                     <div class="mdl-cell mdl-cell--2-col mdl-cell--2-col-phone" style="text-align:center;"><!-- FAB button with ripple -->
                         <a href="newsletter.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect" style="box-shadow : none; width:100px; height:100px; margin-bottom: 5px;">
