--- a/www/qiblat.html
+++ b/www/qiblat.html
@@ -30,8 +30,10 @@
                     <img class="logo-dreamtour" src="img/dream.png">
                 </div>
                 <div style="position:relative; height:330px; width: 100%;">
-                    <div id=compass></div>
-                    <div id=needle></div>
+                    <div id=compass>
+                        <div id=needle></div>
+                    </div>
+                    
                     <!-- <div id=info-panel></div> -->
                 </div>
             </div>
