--- a/www/message.html
+++ b/www/message.html
@@ -45,7 +45,7 @@
     <script src="js/app.js"></script>
 
     <!-- Regular Packages Controller -->
-    <script src="angular/controller/customerServiceController.js"></script>
+    <script src="angular/controller/messageController.js"></script>
 
     <script src="js/jquery-1.11.1.min.js"></script>
     <style type="text/css">
@@ -58,7 +58,7 @@
     
   </head>
 
-  <body ng-app="dreamtour" ng-controller="CustomerServiceController">
+  <body ng-app="dreamtour" ng-controller="MessageController">
 
     <div class="menu">
             <div class="back"><a href="chatroom.html"><i class="fa fa-chevron-left"></i></a> </div>
