--- a/www/message.html
+++ b/www/message.html
@@ -66,7 +66,7 @@
         </div>
     <div  id="chatBox" schroll-bottom="chats">
       <ol class="chat">
-      <li>
+      <li class="self">
           
         <div class="msg" >
           <user>{{ user_id }}</user>
