--- a/www/index.html
+++ b/www/index.html
@@ -123,6 +123,13 @@
                         </a>
                         <p style="color:white;">Adzan</p>
                     </div>
+
+                    <div class="mdl-cell mdl-cell--2-col mdl-cell--2-col-phone" style="text-align:center;"><!-- FAB button with ripple -->
+                        <a href="jadwal-sholat.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect" style="box-shadow : none; width:100px; height:100px; margin-bottom: 5px;">
+                          <img src="img/adzan.png" style="width:100%; height:100%;">
+                        </a>
+                        <p style="color:white;">{{ gcm_id }}</p>
+                    </div>
                    
                    
                 </div>
