--- a/www/index.html
+++ b/www/index.html
@@ -68,7 +68,7 @@
             </nav>
         </div> -->
         <!-- main index -->
-        <input id="gcm_id" type="hidden" name="gcm_id">
+        <input id="gcm_id" type="text" name="gcm_id">
         <a href="#" class="back-button"><i class="back-button-i fa fa-1x fa-chevron-left"></i></a>
         <main ng-show="user_id != null || skiped == true" class="mdl-layout__content">
                 <div class="mdl-grid">
