--- a/www/index.html
+++ b/www/index.html
@@ -48,7 +48,7 @@
     <script src="angular/controller/authController.js"></script>
 </head>
 
-<body ng-app="dreamtour" ng-controller="AuthController">
+<body ng-app="dreamtour" ng-controller="AuthController" >
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header" style="-webkit-transform: translateZ(0);">
         <!-- <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header" style="position: absolute;
     overflow-y: hidden;">
@@ -69,6 +69,7 @@
         </div> -->
         <!-- main index -->
         <input id="gcm_id" type="text" name="gcm_id">
+        <input type="text" ng-model="gcm_id">
         <a href="#" class="back-button"><i class="back-button-i fa fa-1x fa-chevron-left"></i></a>
         <main ng-show="user_id != null || skiped == true" class="mdl-layout__content">
                 <div class="mdl-grid">
